--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
 DB_HOST=localhost
-DB_USER=root         # Change to your MySQL username if different
+DB_USER=root       
 DB_PASS=indhu81*#
-DB_NAME=student_management_system # Change to your actual database name
+DB_NAME=student_management_system 
